@@ -81,7 +81,7 @@
     </script>
 {% endblock %}
 {% block content %}
-    <header class="nice-padding" role="banner">
+    <header class="nice-padding">
         <form action="" method="get" novalidate>
             <div class="row">
                 <div class="left">
