@@ -18,7 +18,7 @@
 
 {% block content %}
 
-    <header class="nice-padding" role="banner">
+    <header class="nice-padding">
         <div class="row row-flush">
             <div class="left col6 header-title">
                 <h1 class="icon icon-snippet">
